k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libro-create
spec:
  replicas: 3
  selector:
    matchLabels:
      app: libro-create
  template:
    metadata:
      labels:
        app: libro-create
    spec:
      containers:
      - name: libro-create
        image: libro-create:latest
        ports:
        - containerPort: 8081
