k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libro-create-service
spec:
  selector:
    app: libro-create
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
  type: NodePort
