k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libro-create-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: libros.local
    http:
      paths:
      - path: /libros
        pathType: Prefix
        backend:
          service:
            name: libro-create-service
            port:
              number: 8081
